# boomi-cicd

./: .gitignore  .pre-commit-config.yaml  README.md  pipeline.py  pyproject.toml  setup.cfg
cicd/: changelog.json  common_functions.py  create_version_file.py  manual_pipeline.py  merge_to_master.py  pipeline.py  promote.py
cicd/resources/: model.py  repository.py  source.py
cicd/utils/: config.toml  log.py  utility.py
tests/: conftest.py  test_Model.py  test_common_functions.py  test_config.toml  test_create_version_file.py  test_log.py  test_model.py  test_pipeline.py  test_promote.py  test_remote.py  test_repository.py  test_source.py
